# stapel-auth

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  MODULE.md  Makefile  README.md  SECURITY.md  __init__.py  _capabilities.py  _codegen.py  _codegen_settings.py  admin.py  apps.py  checks.py  codegen_urls.py  conf.py  conftest.py  dto.py  errors.py  events.py  flows.py  functions.py  gdpr.py  hint_cookie.py  models.py  monitoring_proxy.py  oauth_providers.py  permissions.py  pyproject.toml  ruff.toml  security_views.py  serializers.py  services.py  sso_service.py  sso_views.py  staff_roles.py  tasks.py  tests.py  tests_extra.py  (+7 more)
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml
.github/workflows/: ci.yml  publish.yml
admin/: __init__.py  dto.py  serializers.py  views.py
docs/: capabilities.json  capabilities.meta.json  errors.en.md  errors.json  errors.ru.md  flows.json  schema.json
docs/flows/: README.md  flows.json
docs/flows/en/: README.md  auth.first_login.md  auth.password_login.md  auth.passwordless_login.md  auth.step_up_verification.md
docs/flows/ru/: README.md  auth.first_login.md  auth.password_login.md  auth.passwordless_login.md  auth.step_up_verification.md
login_grant/: serializers.py  services.py  views.py
magic_link/: dto.py  serializers.py  services.py  views.py
management/commands/: consume_gdpr.py
mfa/: dto.py  serializers.py  services.py  views.py
migrations/: 0001_initial.py  0002_initial.py  0003_alter_emailverification_code_and_more.py  0004_authenticatorchangerequest.py  0005_user_sessions_totp_device.py  0006_rename_usersession_user_revoked_idx_user_sessio_user_id_4d7d26_idx_and_more.py  0007_add_audit_log_passkeys_suspicious_session.py  0008_add_device_type_details_to_session.py  0009_add_access_jti_to_session.py  0010_sso_models.py  0011_verification_preference.py  0012_alter_authauditlog_event_type_alter_orgmembership_id_and_more.py  0013_staff_role_assignment.py  0014_widen_sso_config_urls.py  0015_linkedoauthaccount.py  0016_alter_authauditlog_event_type.py  0017_alter_authenticatorchangerequest_change_type.py
oauth/: dto.py  icons.py  providers.py  serializers.py  services.py  views.py
openid/: views.py
otp/: constants.py  dto.py  serializers.py  services.py  utils.py  views.py
password/: dto.py  serializers.py  services.py  views.py
qr/: dto.py  serializers.py  services.py  views.py
schemas/emits/: staff.role.assigned.json  staff.role.revoked.json  user.mfa_disabled.json  user.mfa_enabled.json  user.registered.json  user.session_created.json  user.session_revoked.json
schemas/functions/: auth.issue_login_grant.json  auth.mfa_status.json  auth.provision_user.json  auth.verification.policy.json
security/: dto.py  serializers.py  services.py  views.py
sessions/: dto.py  serializers.py  services.py  views.py
sso/: service.py  views.py
tests/: __init__.py  conftest.py  test_admin_coverage.py  test_anon_promotion.py  test_auth.py  test_auth_hint_cookie.py  test_beat_schedule.py  test_capability_axes.py  test_checks.py  test_commands_events_coverage.py  test_contract.py  test_error_i18n.py  test_error_keys.py  test_extra.py  test_final_gaps_coverage.py  test_first_login_policy.py  test_flow_docs.py  test_flow_i18n.py  test_login_grant.py  test_magic_link_coverage.py  test_mfa_events.py  test_mfa_services_coverage.py  test_mfa_views_coverage.py  test_mounting_urls.py  test_oauth_links.py  test_openid_oauth_coverage.py  test_org_provisioning.py  test_otp_password_services_coverage.py  test_otp_views_misc_coverage.py  test_public_api.py  test_security_status_coverage.py  test_serializer_seams.py  test_services.py  test_session_events.py  test_sessions_coverage.py  test_sso.py  test_sso_coverage.py  test_staff_roles.py  test_step_up_deprecation.py  test_totp_change_flows.py  (+2 more)
translations/: .errors.ru.llm-cache.json  .state.json  errors.ru.json  flows.en.json  flows.ru.json
verification/: __init__.py  dto.py  serializers.py  views.py
