[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "stapel-auth"
version = "0.1.0"
description = "Full-featured authentication Django app for the Stapel framework"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
keywords = ["django", "stapel", "authentication", "jwt", "passkey", "totp", "sso"]
classifiers = [
    "Framework :: Django",
    "Framework :: Django :: 4.2",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

# Core auth — always installed
dependencies = [
    "stapel-core>=0.1.0",
    "pyotp>=2.10",
    "webauthn>=2.8",
    "phonenumbers>=8.13",
]

[project.optional-dependencies]
# SMS via Twilio
phone = [
    "twilio>=9.0",
]
# OAuth (Google, GitHub, Facebook, etc.)
oauth = [
    "social-auth-app-django>=5.4",
]
# SAML 2.0 SP
saml = [
    "lxml>=5.0",
    "signxml>=3.2",
]
# All extras
all = [
    "stapel-auth[phone,oauth,saml]",
]

[tool.setuptools]
package-dir = {"stapel_auth" = "."}
packages = [
    "stapel_auth",
    "stapel_auth.migrations",
    "stapel_auth.otp",
    "stapel_auth.oauth",
    "stapel_auth.sessions",
    "stapel_auth.password",
    "stapel_auth.qr",
    "stapel_auth.mfa",
    "stapel_auth.security",
    "stapel_auth.magic_link",
    "stapel_auth.openid",
    "stapel_auth.admin",
    "stapel_auth.sso",
    "stapel_auth.tests",
]

# Migrations are part of the package
[tool.setuptools.package-data]
stapel_auth = ["migrations/*.py", "migrations/**/*.py"]

[tool.coverage.run]
omit = [
    "*/migrations/*",
    "*/conftest.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]

[tool.pytest.ini_options]
django_find_project = false
addopts = "--tb=short -q"
junit_family = "legacy"
