[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "stapel-auth"
version = "0.7.7"
description = "Full-featured authentication Django app for the Stapel framework"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
keywords = ["django", "stapel", "authentication", "jwt", "passkey", "totp", "sso"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: Django",
    "Framework :: Django :: 5.2",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
]

# Core auth — always installed
dependencies = [
    "stapel-core>=0.10,<0.13",
    "pyotp>=2.10",
    "webauthn>=2.8",
    "phonenumbers>=8.13",
]

[project.urls]
Homepage = "https://github.com/usestapel/stapel-auth"
Repository = "https://github.com/usestapel/stapel-auth"
Documentation = "https://github.com/usestapel/stapel-auth#readme"
Changelog = "https://github.com/usestapel/stapel-auth/blob/main/CHANGELOG.md"
Issues = "https://github.com/usestapel/stapel-auth/issues"

[project.optional-dependencies]
# SMS via Twilio
phone = [
    "twilio>=9.0",
]
# OAuth (Google, GitHub, Facebook, etc.)
oauth = [
    "social-auth-app-django>=5.4",
    "python3-openid>=3.2",
]
# SAML 2.0 SP
saml = [
    "lxml>=5.0",
    "signxml>=3.2",
]
# All extras
all = [
    "stapel-auth[phone,oauth,saml]",
]

[tool.setuptools]
package-dir = {"stapel_auth" = "."}
packages = [
    "stapel_auth",
    "stapel_auth.migrations",
    "stapel_auth.otp",
    "stapel_auth.oauth",
    "stapel_auth.sessions",
    "stapel_auth.password",
    "stapel_auth.qr",
    "stapel_auth.mfa",
    "stapel_auth.security",
    "stapel_auth.magic_link",
    "stapel_auth.openid",
    "stapel_auth.admin",
    "stapel_auth.verification",
    "stapel_auth.management",
    "stapel_auth.management.commands",
]

# Migrations are part of the package
[tool.setuptools.package-data]
stapel_auth = ["migrations/*.py", "schemas/**/*.json", "translations/*.json", "migrations/**/*.py", "py.typed"]

[tool.ruff]
target-version = "py311"

[tool.ruff.lint]
# Single source for the git hooks and CI (they pass the same flags on the CLI).
select = ["E", "F", "W"]
ignore = ["E501"]

[tool.coverage.run]
omit = [
    "*/tests/*",
    "*/conftest.py",
    "*/migrations/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]

[tool.pytest.ini_options]
django_find_project = false
addopts = "--tb=short -q --import-mode=importlib"
junit_family = "legacy"
